--- a/NetBeans/gamecopilot/pom.xml
+++ b/NetBeans/gamecopilot/pom.xml
@@ -31,5 +31,11 @@
             <version>1.0.2</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.sun.mail</groupId>
+            <artifactId>javax.mail</artifactId>
+            <version>1.6.2</version>
+        </dependency>
+
     </dependencies>
 </project>
